- Updated to YUI 2.8.2 r1
- Updated to PDF box 1.3.1
- Updated to POI 3.7 
- Updated to ivy 2.2.0
- Updated to hibernate 3.6.0 Final
- Added updated date to invite info
- Added indexing capabilities for collections
- Added indexing capabilities for user groups
- Changed upload files to return access denied rather than files not uploaded for non-authoring users.
- Updated to Spring 3.0.5



IR+ 2.0.3 to 2.0.4
===========================
Updated to Struts 2.2.1 for security issue

IR+ 2.0.2 to 2.0.3
=============================
- Fixed issue with updating a collection description

IR+ 2.0.1 to 2.0.2
=============================
- Fixed security issue for YUI library


IR+ Changes 2.0 to 2.0.1
==============================
Fixed issue with incorrect indexing of institutional items on submission


IR+ changes 1.0 to 2.0
===============================

[Global]
=============================
- Updated from spring ldap 1.2.1 to spring ldap 1.3.0
- Updated from Apache POI-3.5beta6 - POI-3.6
- Updated from Struts 2.1.6 to 2.1.8.1
- Updated from freemarker 2.1.14 to 2.1.15
- Updated from ognl 2.6.11 to 2.7.3
- Updated from xwork-core 2.1.2 to 2.1.6
- Updated from Ivy 2.1.0-rc1 to 2.2.0-rc1
- Removed JSON library as it was no longer needed [ was used by toJson for researcher ]
- Updated to pdf box 1.2.1
- Updated to hibernate 3.5.2
- Updated to Spring 3.0.2 [All packages]

- Added access method for getting contributor publications ordered by submission date
- Added access method for getting sponsor publications ordered by submission date

- Updated for OAI compatibility

- Changing control list in the administration section will cause all institutional items to 
  reflect the change and cause those items to be indexed if they are the most current institutional
  item version  the following control lists are included:
  
  Content types
  Contributor types
  Copyright statements
  extent types
  identifier types
  language types
  person names
  publishers
  series